unpackaged/main/default/objects/FSSK__FSK_FSL_Starter_Kit__c/fields/FSSK__Actual_Times_on_Gantt__c.field-meta.xml
<CustomField>
    <fullName>FSSK__Actual_Times_on_Gantt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Actual Times on Gantt</label>
    <type>Checkbox</type>
</CustomField>