unpackaged/main/default/objects/FSSK__FSK_FSL_Starter_Kit__c/fields/FSSK__ActualTimes__c.field-meta.xml
<CustomField>
    <fullName>FSSK__ActualTimes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Actual Times</label>
    <type>Checkbox</type>
</CustomField>