unpackaged/main/default/objects/FSSK__FSK_FSL_Starter_Kit__c/fields/FSSK__Add_Asset_to_Maintenance_Plan__c.field-meta.xml
<CustomField>
    <fullName>FSSK__Add_Asset_to_Maintenance_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Asset to Maintenance Plan</label>
    <type>Checkbox</type>
</CustomField>