unpackaged/main/default/objects/FSSK__FSK_FSL_Starter_Kit__c/fields/FSSK__Assign_Resource_On_Service_Appointment__c.field-meta.xml
<CustomField>
    <fullName>FSSK__Assign_Resource_On_Service_Appointment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assign Resource On Service Appointment</label>
    <type>Checkbox</type>
</CustomField>