unpackaged/main/default/objects/FSSK__FSK_FSL_Starter_Kit__c/fields/FSSK__Community_Dispatcher_Permission__c.field-meta.xml
<CustomField>
    <fullName>FSSK__Community_Dispatcher_Permission__c</fullName>
    <label>Community Dispatcher Permission</label>
    <length>18</length>
    <type>Text</type>
</CustomField>