unpackaged/main/default/objects/FSSK__FSK_FSL_Starter_Kit__c/fields/FSSK__Create_FSL_Resource_From_User__c.field-meta.xml
<CustomField>
    <fullName>FSSK__Create_FSL_Resource_From_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create FSL Resource From User</label>
    <type>Checkbox</type>
</CustomField>