unpackaged/main/default/objects/FSSK__FSK_FSL_Starter_Kit__c/fields/FSSK__Custom_Notification_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>FSSK__Custom_Notification_Type_Id__c</fullName>
    <label>Custom Notification Type Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>