unpackaged/main/default/objects/FSSK__FSK_FSL_Starter_Kit__c/fields/FSSK__Days_Until_First_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>FSSK__Days_Until_First_Maintenance__c</fullName>
    <inlineHelpText>Number of days until the first asset maintenance work order date</inlineHelpText>
    <label>Days Until First Maintenance</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>