unpackaged/main/default/objects/FSSK__FSK_FSL_Starter_Kit__c/fields/FSSK__Dispatched_Notification__c.field-meta.xml
<CustomField>
    <fullName>FSSK__Dispatched_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dispatched Notification</label>
    <type>Checkbox</type>
</CustomField>