unpackaged/main/default/objects/FSSK__FSK_FSL_Starter_Kit__c/fields/FSSK__Dispatcher_Permissions_ID__c.field-meta.xml
<CustomField>
    <fullName>FSSK__Dispatcher_Permissions_ID__c</fullName>
    <label>Dispatcher Permissions ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>