unpackaged/main/default/objects/FSSK__FSK_FSL_Starter_Kit__c/fields/FSSK__EndingStatus__c.field-meta.xml
<CustomField>
    <fullName>FSSK__EndingStatus__c</fullName>
    <inlineHelpText>This field stores the Services Appointment statues API Name that indicates changes relates to end time actions</inlineHelpText>
    <label>Ending Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>