unpackaged/main/default/objects/FSSK__FSK_FSL_Starter_Kit__c/fields/FSSK__Excluded_SR_on_SA_Rejection__c.field-meta.xml
<CustomField>
    <fullName>FSSK__Excluded_SR_on_SA_Rejection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Excluded SR on SA Rejection</label>
    <type>Checkbox</type>
</CustomField>