unpackaged/main/default/objects/FSSK__FSK_FSL_Starter_Kit__c/fields/FSSK__Hours_for_Dispatched_Notification__c.field-meta.xml
<CustomField>
    <fullName>FSSK__Hours_for_Dispatched_Notification__c</fullName>
    <defaultValue>36</defaultValue>
    <inlineHelpText>The Number of Hours to notify Technician for dispatched Service Appointment</inlineHelpText>
    <label>Hours for Dispatched Notification</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>