unpackaged/main/default/objects/FSSK__FSK_FSL_Starter_Kit__c/fields/FSSK__Mobile_PSL_ID__c.field-meta.xml
<CustomField>
    <fullName>FSSK__Mobile_PSL_ID__c</fullName>
    <label>Mobile PSL ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>