unpackaged/main/default/objects/FSSK__FSK_FSL_Starter_Kit__c/fields/FSSK__Mobile_Status_Satiation__c.field-meta.xml
<CustomField>
    <fullName>FSSK__Mobile_Status_Satiation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mobile Status Satiation</label>
    <type>Checkbox</type>
</CustomField>