unpackaged/main/default/objects/FSSK__FSK_FSL_Starter_Kit__c/fields/FSSK__Populate_Work_Order_Lookup__c.field-meta.xml
<CustomField>
    <fullName>FSSK__Populate_Work_Order_Lookup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Populate Work Order Lookup</label>
    <type>Checkbox</type>
</CustomField>