unpackaged/main/default/objects/FSSK__FSK_FSL_Starter_Kit__c/fields/FSSK__Remove_Licenses_on_Deactivation__c.field-meta.xml
<CustomField>
    <fullName>FSSK__Remove_Licenses_on_Deactivation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remove Licenses on Resource Deactivation</label>
    <type>Checkbox</type>
</CustomField>