unpackaged/main/default/objects/FSSK__FSK_FSL_Starter_Kit__c/fields/FSSK__Resource_Permissions_ID__c.field-meta.xml
<CustomField>
    <fullName>FSSK__Resource_Permissions_ID__c</fullName>
    <label>Resource Permissions ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>