unpackaged/main/default/objects/FSSK__FSK_FSL_Starter_Kit__c/fields/FSSK__Scheduling_PSL_ID__c.field-meta.xml
<CustomField>
    <fullName>FSSK__Scheduling_PSL_ID__c</fullName>
    <label>Scheduling PSL ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>