unpackaged/main/default/objects/FSSK__FSK_FSL_Starter_Kit__c/fields/FSSK__Set_Gantt_Label__c.field-meta.xml
<CustomField>
    <fullName>FSSK__Set_Gantt_Label__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Set Gantt Label</label>
    <type>Checkbox</type>
</CustomField>