unpackaged/main/default/objects/FSSK__FSK_FSL_Starter_Kit__c/fields/FSSK__StartingStatus__c.field-meta.xml
<CustomField>
    <fullName>FSSK__StartingStatus__c</fullName>
    <inlineHelpText>This field stores the Services Appointment statues API Name that indicates changes relates to start time actions</inlineHelpText>
    <label>Starting Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>