unpackaged/main/default/objects/FSSK__FSK_FSL_Starter_Kit__c/listViews/FSSK__All_Fields_and_Records.listView-meta.xml
<ListView>
    <fullName>FSSK__All_Fields_and_Records</fullName>
    <columns>FSSK__ActualTimes__c</columns>
    <columns>FSSK__StartingStatus__c</columns>
    <columns>FSSK__EndingStatus__c</columns>
    <columns>NAME</columns>
    <columns>SETUP_TYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields and Records</label>
</ListView>